Adding 6 more cases and multimodule flows start